syntax = "proto3";

package customerpb;


// events
message CustomerRegistered {
  string id = 1;
  string name = 2;
  string phone = 3;
  string email = 4;
}

// commands
message AuthorizeCustomer {
  string id = 1;
}
